force-app/main/default/objects/A360_Map_Area__c/A360_Map_Area__c.object-meta.xml
<CustomObject>
    <description
  >Editable visual area on an Animal360 estate map, usually linked to a housing unit.</description>
    <label>Map Area</label>
    <nameField>
        <label>Map Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>