force-app/main/default/objects/A360_Map_Area__c/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <description
  >Stable operational code for this area within a map.</description>
    <label>Area Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>