force-app/main/default/objects/A360_Map_Area__c/fields/Fill_Color__c.field-meta.xml
<CustomField>
    <fullName>Fill_Color__c</fullName>
    <description>Hex color used for area fill in the map renderer.</description>
    <label>Fill Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>