force-app/main/default/objects/A360_Map_Area__c/fields/Height_Pct__c.field-meta.xml
<CustomField>
    <fullName>Height_Pct__c</fullName>
    <description>Area height as a percentage of map height.</description>
    <label>Height Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>