force-app/main/default/objects/A360_Map_Area__c/fields/Housing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Housing_Unit__c</fullName>
    <description>Housing unit represented by this map area.</description>
    <label>Housing Unit</label>
    <referenceTo>Housing_Unit__c</referenceTo>
    <relationshipLabel>Map Areas</relationshipLabel>
    <relationshipName>Map_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>