force-app/main/default/objects/A360_Map_Area__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Marks whether this area is rendered on the active map.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>