force-app/main/default/objects/A360_Map_Area__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Label shown on the map area.</description>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>