force-app/main/default/objects/A360_Map_Area__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <description>Operational availability for an estate map area.</description>
    <fullName>Operational_Status__c</fullName>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>