force-app/main/default/objects/A360_Map_Area__c/fields/Rotation__c.field-meta.xml
<CustomField>
    <fullName>Rotation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Clockwise rotation in degrees.</description>
    <label>Rotation</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>