force-app/main/default/objects/A360_Map_Area__c/fields/Shape__c.field-meta.xml
<CustomField>
    <fullName>Shape__c</fullName>
    <description>Shape used by the map renderer.</description>
    <label>Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rounded Rectangle</fullName>
                <default>true</default>
                <label>Rounded Rectangle</label>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Ellipse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>