force-app/main/default/objects/A360_Map_Area__c/fields/Width_Pct__c.field-meta.xml
<CustomField>
    <fullName>Width_Pct__c</fullName>
    <description>Area width as a percentage of map width.</description>
    <label>Width Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>