force-app/main/default/objects/A360_Map_Area__c/fields/X_Pct__c.field-meta.xml
<CustomField>
    <fullName>X_Pct__c</fullName>
    <description>Left position as a percentage of map width.</description>
    <label>X Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>