force-app/main/default/objects/A360_Map_Area__c/fields/Y_Pct__c.field-meta.xml
<CustomField>
    <fullName>Y_Pct__c</fullName>
    <description>Top position as a percentage of map height.</description>
    <label>Y Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>