force-app/main/default/objects/A360_Map_Area__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description
  >Operational zone, such as Kennels, Cattery, Clinic, or Intake.</description>
    <label>Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>